# zrythm-lilv

./: .gitignore  README.md  meson.build  wscript
lilv-0.24.6/: meson.build
lilv-0.24.6/.waf-1.8.22-985a667c86981bbd06ccfe1f94032940/waflib/extras/: autowaf.py  swig.py
lilv-0.24.6/src/: meson.build  util.c
lilv-0.24.6/src/zix/: meson.build
lv2-1.16.0/: meson.build
lv2-1.18.0/: NEWS  meson.build
serd-0.30.2/: meson.build
serd-0.30.2/src/: meson.build
sord-0.16.4/: meson.build
sord-0.16.4/src/: meson.build
sord-0.16.4/src/zix/: meson.build
sratom-0.6.4/: meson.build
sratom-0.6.4/src/: meson.build
utils/: lv2apply.c
